...
    <string name="app_name">AuxBox</string>
    <string name="play_song_text">Play Song</string>
    <string name="host_session_text">Host Session</string>
    <string name="create_a_session_text">Create a Session</string>
    <string name="create_text">Create</string>
    <string name="join_a_session_text">Join a Session</string>
    <string name="join_text">Join</string>
    <string name="log_in_text">Log In</string>
    <string name="log_out_text">LogOut</string>
    <string name="sign_in_text">Please sign in</string>
    <string name="create_a_new_account_text">Create a new Account</string>
    <string name="full_name_text_hint">Full Name:</string>
    <string name="password_text_hint">Password:</string>
    <string name="email_text_hint">Email:</string>
...
    <string name="login_failed">Error! Not logged in!</string>
    <string name="register_successful1">User account </string>
    <string name="register_successful2"> was created!</string>
    <string name="register_failed">Error! User account was not created!</string>
    <string name="play_text">Play</string>
    <string name="stop_text">Stop</string>
    <string name="upload_button_text">UPLOAD</string>
    <string name="file_not_found">No file!</string>
    <string name="user_session_text">User Session</string>
    <string name="song_title_text">Song Title</string>
    <string name="song_save_text">Save Song</string>
    <string name="new_user">Not yet a member? Create a new Account</string>
    <string name="pause_text">Pause</string>
    <string name="song_link_text">Song Title</string>
    <string name="song_committed_to_db">Song sent to database!</string>
    <string name="song_failed_commit_to_db">Song failed to be sent to the database</string>
    <string name="download_playlist">Get Queue</string>
...
