...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSessionBtn" />

    <Button
        android:id="@+id/joinbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/join_text"
        app:layout_constraintEnd_toEndOf="parent"
...
